Bug 153128 - Tiny first line in a DOCX is imported with large height
Summary: Tiny first line in a DOCX is imported with large height
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0 all versions
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisectNotNeeded, filter:docx, regression
Depends on:
Blocks:
 
Reported: 2023-01-20 20:10 UTC by Mike Kaganski
Modified: 2023-01-24 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
DOCX with a tiny first line (13.11 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-01-20 20:10 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-01-20 20:10:55 UTC
Created attachment 184797 [details]
DOCX with a tiny first line

The attached DOCX document (created in Word) only has a space in its first line; its height is set manually to 1 pt. A cursor in it is shown as hardly visible pixel in Word.

When opened in Writer, the line height is the same as of the second line.
Comment 1 Mike Kaganski 2023-01-21 05:33:53 UTC
https://gerrit.libreoffice.org/c/core/+/145919
Comment 2 Commit Notification 2023-01-21 11:38:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c31267e23603c77e3a3335fa431bb9b74448d5b2

tdf#153128: do not increase line height, when ignoring whitespace

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Stéphane Guillou (stragu) 2023-01-23 08:39:57 UTC
Repro the issue in:

Version: 6.0.0.0.alpha1 (x64)
Build ID: c1d1f859b268f650143d48f294999cda0fa57350
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: en-GB (en_GB); Calc: group

Regression, as line was tiny in:

OpenOffice.org 3.3.0
OOO330m20 (Build:9567)
Comment 4 Commit Notification 2023-01-24 09:42:39 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/060e9ea28aef4998609197eeac58ec74fd32111e

tdf#153128: do not increase line height, when ignoring whitespace

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Stéphane Guillou (stragu) 2023-01-24 14:13:24 UTC
Verified fix in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f23dae00fedc9d7119b44b6c44d9eca4f8c87b8
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you, Mike!