tdf#153128: do not increase line height, when ignoring whitespace

Since 2006, there is IgnoreTabsAndBlanksForLineCalculation compat flag,
that handles whitespace-only text portions like in Word, not affecting
resulting line height.

The implementation, however, did not check if the corrected value is
no larger than the old one. In the bugdoc, this increased the resulting
line height.

Change-Id: If855af3e87fd1458d92a36fdbcfa2c681a1075ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145919
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145998